--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "multer": "^1.4.5-lts.1",
+    "stripe": "^13.10.0",
     "swagger-stats": "^0.99.7"
   },
   "devDependencies": {
