--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.69.3"
   },
   "devDependencies": {
